--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-i18n": "4.13.6",
+    "@strapi/plugin-color-picker": "^4.13.7",
+    "@strapi/plugin-graphql": "^4.13.7",
+    "@strapi/plugin-i18n": "^4.13.7",
     "@strapi/plugin-users-permissions": "4.13.6",
     "@strapi/provider-upload-cloudinary": "4.13.6",
     "@strapi/strapi": "4.13.6",
-    "pg": "8.11.3"
+    "pg": "8.11.3",
+    "strapi-auto-uuid": "^0.0.8"
   },
   "author": {
     "name": "A Strapi developer"
