--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@bn-digital/strapi-plugin-field-uuid": "^1.2.12",
     "@strapi/plugin-color-picker": "^4.13.7",
     "@strapi/plugin-graphql": "^4.13.7",
     "@strapi/plugin-i18n": "^4.13.7",
